# Simple_Snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  start.bat  start.sh
include/: Apple.hpp  Counter.hpp  GameInterface.hpp  Snake.hpp  my_lib.hpp
src/: Apple.cpp  Counter.cpp  GameInterface.cpp  Snake.cpp  main.cpp  my_lib.cpp
